# SyncFlow

./: .gitignore  ANDROID_SETUP_INDEX.md  ANDROID_TERMUX_INTEGRATION.md  CMakeLists.txt  COMPLETE_DOCUMENTATION.md  Cargo.toml  DEVICE_CONNECTION_LOGGING.md  LICENSE  README.md  README_PACKAGING.md  README_TERMUX.md  SETUP_COMPLETE.md  SYNC_FOLDER_TRANSFER_FEATURE.md  build.sh  config.json  new_methods.cpp
.github/workflows/: cross-platform.yml
android/: README.md  gradle.properties  settings.gradle.kts
android-app/: README.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/syncflow/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.hpp  jni_peer.cpp  jni_stub.cpp  native-lib.cpp  native_bridge.cpp
android/app/src/main/cpp/file_sync/: file_sync.cpp
android/app/src/main/cpp/networking/: file_transfer.cpp  peer_protocol.cpp
android/app/src/main/java/com/syncflow/: BootReceiver.kt  ConnectionManager.kt  (+8 more)
android/app/src/main/res/drawable/: log_bg.xml
android/app/src/main/res/layout/: activity_device_info.xml  activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/include/syncflow/: version.hpp
android/tests/: test_chunk_hasher[1]_include.cmake  test_crypto[1]_include.cmake  test_multi_device[1]_include.cmake  test_peer_sync[1]_include.cmake  test_sync_diff[1]_include.cmake  test_version_vector[1]_include.cmake
build_check/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
docs/: ARCHITECTURE.md  BUILD_AND_USAGE.md  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  TERMUX_BUILD.md  TERMUX_QUICK_REF.md  decentralized_p2p_sync.md  syncflow.1
examples/: block_index_example.cpp  resumable_transfer_example.cpp
include/: blake3.h
include/core/: Application.h  ConfigManager.h  Logger.h  ThreadPool.h
include/crypto/: CryptoEngine.h
include/discovery/: discovery.h
include/networking/: DeviceDiscovery.h  PeerSyncExchange.h  SyncProtocol.h  TcpHandshake.h
include/platform/: FolderWatcher.h  PlatformPaths.h  PlatformSocket.h
include/security/: AuthManager.h
include/sync_engine/: BlockIndex.h  FileTransfer.h  HashUtils.h  RemoteSync.h  ResumableTransferManager.h  SyncEngine.h  SyncPlanner.h
include/syncflow/: chunk_hasher.hpp  config.h  logging.h  networking_stack.hpp  peer_manager.hpp  security_manager.hpp  storage_layer.hpp  sync_diff_algorithm.hpp  sync_engine.hpp  types.h  types.hpp  version.hpp.in
include/syncflow/common/: logger.h  utils.h
include/syncflow/discovery/: discovery.h
include/syncflow/file_sync/: file_sync.h
include/syncflow/gui/: device_approval_dialog.h  main_window.h  settings_dialog.h  sync_worker.h
include/syncflow/networking/: file_transfer.h  peer_node.h  peer_protocol.h
include/syncflow/platform/: platform.h  system_info.h
include/syncflow/security/: certificate_manager.h  device_authenticator.h  integrity_checker.h  trusted_device_list.h
include/syncflow/sync/: sync.h
include/syncflow/transfer/: transfer.h
include/syncflow/watcher/: watcher.h
resources/: syncflow.qrc
scripts/: build-termux.sh  install-termux.sh  run-syncflow.sh  setup-termux.sh  verify-android-support.sh
src/: discovery.rs  file_watcher.rs  main.cpp  main.rs  network.rs  sync_engine.rs  transfer.rs  utils.rs
src/agent/: syncflow_agent.cpp
src/cli/: cli_handler.cpp  commands.cpp  main.cpp  syncflow_cli.cpp
src/common/: config.cpp  logger.cpp  types.cpp  utils.cpp
src/core/: Application.cpp  ConfigManager.cpp  Logger.cpp  ThreadPool.cpp  config_manager.cpp  event_bus.cpp  logger.cpp  peer_manager.cpp  stubs.cpp  sync_engine.cpp  types.cpp
src/crypto/: CryptoEngine.cpp  blake3.c
src/discovery/: device-connect.cpp  device.cpp  device_manager.cpp  discovery_engine.cpp
src/file_sync/: file_sync.cpp
src/gui/: device_approval_dialog.cpp  gui_main.cpp  main_window.cpp  settings_dialog.cpp  sync_worker.cpp
src/networking/: DeviceDiscovery.cpp  PeerSyncExchange.cpp  SyncProtocol.cpp  TcpHandshake.cpp  connection_pool.cpp  local_discovery.cpp  peer_connection.cpp  peer_node.cpp  relay_manager.cpp  stun_client.cpp
src/platform/: FolderWatcher.cpp  PlatformPaths.cpp  PlatformSocket.cpp  file_system.cpp  networking.cpp  platform.cpp  system_info.cpp  thread_pool.cpp
src/platform/android/: file_watcher.cpp  network_config.cpp
src/platform/linux/: file_watcher.cpp
src/platform/macos/: file_watcher.cpp
src/platform/windows/: file_watcher.cpp  network_config.cpp
src/security/: AuthManager.cpp  certificate_manager.cpp  crypto_manager.cpp  device_authenticator.cpp  integrity_checker.cpp  key_store.cpp  mutual_auth.cpp  tls_context.cpp  trusted_device_list.cpp
src/storage/: database_manager.cpp  file_index.cpp  sync_journal.cpp
src/sync/: conflict_resolver.cpp  directory_sync.cpp  file_manifest.cpp  sync_engine.cpp
src/sync_engine/: BlockIndex.cpp  FileTransfer.cpp  RemoteSync.cpp  ResumableTransferManager.cpp  SyncEngine.cpp  SyncPlanner.cpp  chunk_hasher.cpp  conflict_resolver.cpp  file_watcher.cpp  messages.proto  sync_diff_algorithm.cpp  version_vector.cpp
src/transfer/: chunk_manager.cpp  file_transfer.cpp  transfer_manager.cpp  transfer_protocol.cpp
src/ui/: syncflow_desktop_fltk.cpp  syncflow_ui.cpp
src/watcher/: file_watcher.cpp  fs_monitor.cpp
tests/: CMakeLists.txt  test_discovery.cpp  test_platform.cpp  test_resumable_transfer.cpp  test_sync_core.cpp  test_transfer.cpp
tests/integration/: test_multi_device.cpp  test_peer_sync.cpp
tests/unit/: test_chunk_hasher.cpp  test_crypto.cpp  test_sync_diff.cpp  test_version_vector.cpp
(+7 files in other folders)
