[package]
name = "syncflow"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Peer-to-peer LAN file synchronization tool"

[dependencies]
anyhow = "1"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
